// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditFilterListToolbar renders the toolbar with no items selected 1`] = `
<Fragment>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexEnd"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <AddItemPopover
        addItems={[MockFunction]}
        canCreateFilter={true}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    alignItems="center"
    component="div"
    direction="row"
    gutterSize="xl"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiButton
        color="danger"
        disabled={true}
        fill={false}
        iconSide="left"
        onClick={[MockFunction]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Delete item"
          id="xpack.ml.settings.filterLists.toolbar.deleteItemButtonLabel"
          values={Object {}}
        />
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiSearchBar
        onChange={[MockFunction]}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;

exports[`EditFilterListToolbar renders the toolbar with one item selected 1`] = `
<Fragment>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexEnd"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <AddItemPopover
        addItems={[MockFunction]}
        canCreateFilter={true}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    alignItems="center"
    component="div"
    direction="row"
    gutterSize="xl"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiButton
        color="danger"
        disabled={false}
        fill={false}
        iconSide="left"
        onClick={[MockFunction]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Delete item"
          id="xpack.ml.settings.filterLists.toolbar.deleteItemButtonLabel"
          values={Object {}}
        />
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiSearchBar
        onChange={[MockFunction]}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;
